[tool.poetry]
name = "one-billion-row"
version = "0.1.0"
description = ""
authors = ["jusluz <julioluz84@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
tqdm = "^4.66.5"
duckdb = "^1.0.0"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
